# vascular-network-synthetic

./: .gitignore  Dockerfile  README.md  demo.sh  evaluate.py  movie_test.py  pyproject.toml  settings.py  test.ipynb  train.py  train_2.py  vascular_visual_generator.py  visual_test.py
configs/: default_config.yaml
configs/evaluator/: evaluator_1.yaml
configs/model/: model_1.yaml
configs/paths/: paths_2_2_2_10.yaml  paths_2_2_5_10.yaml  paths_2_2_7_10.yaml  paths_4_2_5_10.yaml  paths_4_2_7_10.yaml
configs/trainer/: trainer_1.yaml
sgg/: callbacks.py  data.py  data_old.py  evaluate.py  graph_data_generator.py  model.py  trainer.py
utils/: categorical_coordinates_encoder.py  embedding.py  pyg.py  scale_factor_categorical_encoder.py  torch.py  util.py  visualize.py
vascular_network/: dataset.py  dataset_generation.py  vessap_utils.py
