[tool.poetry]
name = "vascular-net-synth"
version = "0.1.0"
description = ""
authors = ["João Braz Simões <joaosbraz@gmail.com>"]
readme = "README.md"
packages = [{include = "vascular_net_synth"}]

[tool.poetry.dependencies]
python = "~3.10"
torch = [
    {url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
]
torch-geometric = "^2.2.0"
torch-scatter = [
    {url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_scatter-2.0.9-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
]
torch-sparse = [
    {url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_sparse-0.6.16%2Bpt113cu117-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
torch-cluster = [
    {url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_cluster-1.6.0%2Bpt113cu117-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
networkx = "==2.8.8"
numpy = "^1.24.1"
wandb = "^0.13.9"
plotly = "^5.12.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.3"
pygments = "*"
pandas = "*"
hydra-core = "^1.3.2"
nodevectors = "^0.1.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

